--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.1",
