--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.1",
-    "react-navigation": "^3.0.0"
+    "react-navigation": "^3.0.0",
+    "react-navigation-backhandler": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
