--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "ramda": "^0.26.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.0.0",
     "react-navigation-backhandler": "^1.3.2"
   },
